Add `sync` and `async` endpoints to TS SDK (#266)
